bpo-11566: Extension build errors on Windows for _hypot (GH-11283)

This addresses C extension build errors related to an undefined _hypot
symbol when building with the Microsoft Visual C++ Compiler for Python
2.7 [1] or MinGWPy [2]. It also addresses errors when building a C++
extension with MinGWPy and C++11 from cmath, 'error "::hypot' has not
been declared'

[1] https://www.microsoft.com/en-us/download/details.aspx?id=44266
[2] https://mingwpy.github.io/
(cherry picked from commit 87667c54c6650751c5d7bf7b9e465c8c4af45f71)

Co-authored-by: Matt McCormick <matt@mmmccormick.com>